Update swagger doc and device query
